// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BibTeX Parser should parse suppressBraceProtection does not work for BibTeX export (non-English items) #1194-export to an AST 1`] = `
Object {
  "children": Array [
    Object {
      "id": "Landafshits.V7",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 16,
          "offset": 324,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 70,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 26,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 44,
                  "line": 2,
                  "offset": 67,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 36,
                },
              },
              "value": "Ландау, Л. Д. and Лифшиц, Е. М.",
            },
          ],
        },
        Object {
          "key": "date",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 87,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 70,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 3,
                  "offset": 84,
                },
                "start": Object {
                  "column": 11,
                  "line": 3,
                  "offset": 80,
                },
              },
              "value": "2007",
            },
          ],
        },
        Object {
          "key": "edition",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 104,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 87,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 4,
                  "offset": 101,
                },
                "start": Object {
                  "column": 14,
                  "line": 4,
                  "offset": 100,
                },
              },
              "value": "5",
            },
          ],
        },
        Object {
          "key": "isbn",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 130,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 104,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 5,
                  "offset": 127,
                },
                "start": Object {
                  "column": 11,
                  "line": 5,
                  "offset": 114,
                },
              },
              "value": "5-9221-0122-6",
            },
          ],
        },
        Object {
          "key": "langid",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 7,
              "offset": 152,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 130,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 6,
                  "offset": 149,
                },
                "start": Object {
                  "column": 13,
                  "line": 6,
                  "offset": 142,
                },
              },
              "value": "russian",
            },
          ],
        },
        Object {
          "key": "location",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 173,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 152,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 7,
                  "offset": 170,
                },
                "start": Object {
                  "column": 15,
                  "line": 7,
                  "offset": 166,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 18,
                      "line": 7,
                      "offset": 169,
                    },
                    "start": Object {
                      "column": 16,
                      "line": 7,
                      "offset": 167,
                    },
                  },
                  "value": "М.",
                },
              ],
            },
          ],
        },
        Object {
          "key": "pagetotal",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 9,
              "offset": 194,
            },
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 173,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 8,
                  "offset": 191,
                },
                "start": Object {
                  "column": 16,
                  "line": 8,
                  "offset": 188,
                },
              },
              "value": "259",
            },
          ],
        },
        Object {
          "key": "publisher",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 223,
            },
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 194,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 9,
                  "offset": 220,
                },
                "start": Object {
                  "column": 16,
                  "line": 9,
                  "offset": 209,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 26,
                      "line": 9,
                      "offset": 219,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 9,
                      "offset": 210,
                    },
                  },
                  "value": "Физматлит",
                },
              ],
            },
          ],
        },
        Object {
          "key": "series",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 11,
              "offset": 258,
            },
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 223,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 33,
                  "line": 10,
                  "offset": 255,
                },
                "start": Object {
                  "column": 13,
                  "line": 10,
                  "offset": 235,
                },
              },
              "value": "Теоретическая физика",
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 12,
              "offset": 288,
            },
            "start": Object {
              "column": 1,
              "line": 11,
              "offset": 258,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 28,
                  "line": 11,
                  "offset": 285,
                },
                "start": Object {
                  "column": 12,
                  "line": 11,
                  "offset": 269,
                },
              },
              "value": "Теория упругости",
            },
          ],
        },
        Object {
          "key": "volume",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 13,
              "offset": 304,
            },
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 288,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 12,
                  "offset": 301,
                },
                "start": Object {
                  "column": 13,
                  "line": 12,
                  "offset": 300,
                },
              },
              "value": "7",
            },
          ],
        },
        Object {
          "key": "volumes",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 14,
              "offset": 321,
            },
            "start": Object {
              "column": 1,
              "line": 13,
              "offset": 304,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 16,
                  "line": 13,
                  "offset": 319,
                },
                "start": Object {
                  "column": 14,
                  "line": 13,
                  "offset": 317,
                },
              },
              "value": "10",
            },
          ],
        },
      ],
      "type": "mvbook",
    },
  ],
  "kind": "File",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 16,
      "offset": 324,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`BibTeX Parser should parse suppressBraceProtection does not work for BibTeX export (non-English items) #1194-export to an AST 2`] = `
Object {
  "children": Array [
    Object {
      "id": "Landafshits.V7",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 15,
          "offset": 309,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Array [
        Object {
          "key": "address",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 42,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 24,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 18,
                  "line": 2,
                  "offset": 39,
                },
                "start": Object {
                  "column": 14,
                  "line": 2,
                  "offset": 35,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 17,
                      "line": 2,
                      "offset": 38,
                    },
                    "start": Object {
                      "column": 15,
                      "line": 2,
                      "offset": 36,
                    },
                  },
                  "value": "М.",
                },
              ],
            },
          ],
        },
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 88,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 42,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 44,
                  "line": 3,
                  "offset": 85,
                },
                "start": Object {
                  "column": 13,
                  "line": 3,
                  "offset": 54,
                },
              },
              "value": "Ландау, Л. Д. and Лифшиц, Е. М.",
            },
          ],
        },
        Object {
          "key": "edition",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 105,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 88,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 4,
                  "offset": 102,
                },
                "start": Object {
                  "column": 14,
                  "line": 4,
                  "offset": 101,
                },
              },
              "value": "5",
            },
          ],
        },
        Object {
          "key": "isbn",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 131,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 105,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 24,
                  "line": 5,
                  "offset": 128,
                },
                "start": Object {
                  "column": 11,
                  "line": 5,
                  "offset": 115,
                },
              },
              "value": "5-9221-0122-6",
            },
          ],
        },
        Object {
          "key": "language",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 7,
              "offset": 155,
            },
            "start": Object {
              "column": 1,
              "line": 6,
              "offset": 131,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 22,
                  "line": 6,
                  "offset": 152,
                },
                "start": Object {
                  "column": 15,
                  "line": 6,
                  "offset": 145,
                },
              },
              "value": "russian",
            },
          ],
        },
        Object {
          "key": "pagetotal",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 176,
            },
            "start": Object {
              "column": 1,
              "line": 7,
              "offset": 155,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 7,
                  "offset": 173,
                },
                "start": Object {
                  "column": 16,
                  "line": 7,
                  "offset": 170,
                },
              },
              "value": "259",
            },
          ],
        },
        Object {
          "key": "publisher",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 9,
              "offset": 205,
            },
            "start": Object {
              "column": 1,
              "line": 8,
              "offset": 176,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 27,
                  "line": 8,
                  "offset": 202,
                },
                "start": Object {
                  "column": 16,
                  "line": 8,
                  "offset": 191,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 26,
                      "line": 8,
                      "offset": 201,
                    },
                    "start": Object {
                      "column": 17,
                      "line": 8,
                      "offset": 192,
                    },
                  },
                  "value": "Физматлит",
                },
              ],
            },
          ],
        },
        Object {
          "key": "series",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 242,
            },
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 205,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 35,
                  "line": 9,
                  "offset": 239,
                },
                "start": Object {
                  "column": 13,
                  "line": 9,
                  "offset": 217,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 34,
                      "line": 9,
                      "offset": 238,
                    },
                    "start": Object {
                      "column": 14,
                      "line": 9,
                      "offset": 218,
                    },
                  },
                  "value": "Теоретическая физика",
                },
              ],
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 11,
              "offset": 274,
            },
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 242,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 30,
                  "line": 10,
                  "offset": 271,
                },
                "start": Object {
                  "column": 12,
                  "line": 10,
                  "offset": 253,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 29,
                      "line": 10,
                      "offset": 270,
                    },
                    "start": Object {
                      "column": 13,
                      "line": 10,
                      "offset": 254,
                    },
                  },
                  "value": "Теория упругости",
                },
              ],
            },
          ],
        },
        Object {
          "key": "volume",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 12,
              "offset": 290,
            },
            "start": Object {
              "column": 1,
              "line": 11,
              "offset": 274,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 11,
                  "offset": 287,
                },
                "start": Object {
                  "column": 13,
                  "line": 11,
                  "offset": 286,
                },
              },
              "value": "7",
            },
          ],
        },
        Object {
          "key": "year",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 13,
              "offset": 306,
            },
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 290,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 12,
                  "offset": 304,
                },
                "start": Object {
                  "column": 11,
                  "line": 12,
                  "offset": 300,
                },
              },
              "value": "2007",
            },
          ],
        },
      ],
      "type": "book",
    },
  ],
  "kind": "File",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 15,
      "offset": 309,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;
